--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 /*VARIABLES*/
  $color-principal:rgb(206, 123, 123);
- $titulo-font:20px;
+ $titulo-font:35px;
  $subtitulos-color:rgb(112, 201, 179);
  $color-fondo:rgba(250, 237, 124, 0.788);
 
@@ -39,10 +39,11 @@
 
     
 .header__navegacion{
+    opacity: 0.8;
     width: 98vw;
     padding-bottom: 15px;
     margin-bottom: 65px;
-    background: $color-principal;
+    background: rgba(206, 123, 123,0.9);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     ul{
         list-style: none;
@@ -58,11 +59,10 @@
 
 .header__menu > li > a{
     padding: 15px 20px;
-    color:#353535;
+    color:black;
     text-decoration: none;
     letter-spacing: 5px;
-    font-size: 16px;
-    
+    font-size: 18px;
     
 }
 
@@ -100,7 +100,7 @@
     text-decoration:none;
 }
 
-.header__menu li:hover .header__submenu{
+    .header__menu li:hover .header__submenu{
     visibility: visible;
     opacity: 1;
     display: flex;
@@ -113,6 +113,7 @@
 
 /*catalogo*/
 
+
 .imagenes__ruanas{
     display: flex;
     flex-direction:row;
@@ -120,6 +121,7 @@
     background-color:$subtitulos-color;
     width: 100%;
     justify-content: center;
+    background: rgba(127, 221, 193,0.8);
     div{
         display: flex;
         flex-direction:column;
@@ -130,6 +132,12 @@
     }  
 }
 
+img{
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 50px;
+}
+
 .imagenes__ruanas div img{
     transition:transform .8s;
 }
@@ -138,9 +146,6 @@
     transform:scale(1.1);
 }
 
-.imagenes__ponchos{
-    @extend .imagenes__ruanas;
-}
 
 .imagenes__sweters{
     @extend .imagenes__ruanas;
@@ -150,15 +155,17 @@
     @extend .imagenes__ruanas;
 }
 
-
+.imagenes__polerones{
+    @extend .imagenes__ruanas;
+}
 
 #ruanas{
-    color: $color-principal;
+    color: $subtitulos-color;
     padding-top: 30px;
     font-size: 30px;
 }
 
-#ponchos{
+#polerones{
     @extend #ruanas;
 }
 
@@ -191,12 +198,11 @@ h1{
 
 .footer__noWrap {
     border-bottom: black 1px solid;
-}
     img{
-        padding-right: 20px;
-        padding-left: 20px;
-        padding-bottom: 50px;
+        width: 100px;
     }
+}
+    
 
 
 /*contacto*/
@@ -208,9 +214,10 @@ h1{
 
  .footer__color{
     @include sizes(98vw,20vh );
-    background-color: $color-principal;
+    background: rgba(206, 123, 123,0.8);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-top: 50px;
+   
 }
 
 .p__center{
@@ -221,9 +228,10 @@ form{
     display: flex;
     flex-direction: column;
     border:$color-principal 30px solid;
-    background-color: $color-fondo;
+    background-color:wheat;
     padding: 15px 15px 15px 15px;
-    box-shadow: 10px 10px 5px grey;
+    box-shadow: 10px 10px 5px rgba(61, 59, 59, 0.945);
+    opacity: 0.8;
 }
 
 input{
@@ -277,14 +285,15 @@ h3{
 
 /*clase para centrar el copy*/
 .footer__center{
+    height: 100%;
     text-align: center;
     padding-bottom: 30px;
 }
 
-/*en cuidado de las prendas*/
+/*TIPS*/
 .formatoSubtitulo{
     font-size: 20px;
-    color:$color-principal;
+    color:black;
     text-transform: uppercase;
     font-weight: bold;
     text-align:left;
@@ -293,22 +302,31 @@ h3{
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
+    text-align: center;
 }
 
 .tips{
     display: flex;
     flex-direction:column;
-    margin: 10px;
+    margin-bottom: 10px;
     margin-top: 20px;
-    border: 2px solid black;
-    background-color: rgba(250, 237, 124, 0.788);
+    border: 1px solid black;
+    border-radius: 6px;
+    background: rgba(226, 219, 219, 0.3);
+    
+   
+   
 }
 
 .masTips{
-    border-top: 2px solid black;
-    padding-top: 15px;
+    border: 1px solid black;
+    border-radius: 6px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
     word-spacing: normal;
     font-size: 20px;
+    background: rgba(226, 219, 219, 0.3);
 }
 
 .textoCaracteristicas{
@@ -323,9 +341,9 @@ h3{
     display: flex;
     flex-direction:row;
     flex-wrap: wrap;
-    background-color:$subtitulos-color;
     width: 100%;
     justify-content:center;
+    opacity: 0.7;
     div{
         display: flex;
         flex-direction:column;
@@ -338,15 +356,10 @@ body{
     display: flex;
     flex-direction:column;
     align-items: center;
+
 }
 
 /*grid*/
-
-body {
-   background-size: 109px 109px, 109px 109px, 100% 6px, 109px 109px, 109px 109px;
-    background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
-    font-family: 'Manjari', sans-serif;
-}
 
 /* CONTAINER */
 
@@ -361,14 +374,16 @@ body {
     gap: 1.6em;
     /*creo las 5 columnas*/
     grid-template-columns: repeat(5, 1fr);
-    box-shadow: 10px 10px 5px grey;
+    
 }
 
 .container>.header, .container>.content, .container>.sidebar, .container>.footer, .container>div {
-    background: #fff;
+    
     padding: 20px;
     border: 1px solid #000000;
-    box-shadow: 10px 10px 5px grey;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 6px;
+   
 }
 /*para el header dentro del container,
  para el footer dentro del container*/
@@ -376,6 +391,7 @@ body {
     grid-column: 1/-1;
     background-color:rgb(206, 123, 123) ;
     color: #ffffff;
+
 }
 
 .container>.content {
@@ -385,7 +401,8 @@ body {
 }
 
 .content>.article {
-    background: $subtitulos-color;
+    background-color:$subtitulos-color;
+    opacity: 0.8;
     padding: 20px;
     margin-top: 5px;
     color: black
@@ -404,6 +421,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    opacity: 0.8;
 
 }
 
@@ -423,6 +441,7 @@ body {
     display: block;
     width: 100%;
     margin-top: 5px;
+
 }
 
 .footer{
@@ -433,6 +452,8 @@ body {
 .container{
     word-spacing: normal;
 }
+
+
 
 /*media queries*/
 /*mobile*/
@@ -448,9 +469,15 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        height: 30vh;
         
     }
 
+    .header__menu li{
+        border-bottom: blanchedalmond 1px solid;
+        
+    }
+    
     .container{
         display: flex;
         flex-direction: column;
@@ -474,7 +501,40 @@ body {
         width: 200px;
         
     }
+
+    .header__submenu{
+        position: none;
+        width:none;
+        background:none;
+        visibility:none;
+        opacity: none;
+        transition: opacity none;
+        letter-spacing: none;
+        box-shadow: none;
+    }
     
+    .header__submenu li a{
+        display: none;
+        display: none;
+        flex-direction: column;
+        align-items: none;
+        justify-content: none;
+        padding-right: none;
+        color:none;
+        text-decoration:none;
+    }
+
+    .footer__noWrap {
+        border-bottom: black 1px solid;
+        img{
+            width: 70px;
+        }
+    }
+
+    h1{
+        font-size: 30px;
+    }
+
 }
 
 /*animaciones*/
@@ -492,4 +552,37 @@ body {
         opacity: 1;
     }
 }   
+
+body.imgFondo{
+    background-image: url(https://d3ugyf2ht6aenh.cloudfront.net/stores/810/249/products/18512611-16ea-4883-be5d-22c22d9ed28a_1_105_c1-e627095f59687991d816209144861002-640-0.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+body.contacto{
+    background-image: url(https://d3ugyf2ht6aenh.cloudfront.net/stores/810/249/products/be0751e1-3729-4f5f-92ae-a8caa042dc42_1_105_c1-36c16d3b5386b4326016209335156465-640-0.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+body.body__center{
+    background-image: url(https://i.pinimg.com/564x/01/bb/a3/01bba3d259ec96385e190b9069f8c520.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+body.body__tips{
+    background-image: url(https://d3ugyf2ht6aenh.cloudfront.net/stores/810/249/products/4a1abf99-9250-4c57-ae41-d70f2c6b156c_1_105_c21-c2a62e9458d57506ef16171293825434-1024-1024.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+    
+body.body__catalogo{
+    background-image: url(https://images.pexels.com/photos/235985/pexels-photo-235985.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+    background-repeat:no-repeat;
+    background-size: cover;
+
+    
+}
 
