--- a/css/style.css
+++ b/css/style.css
@@ -25,10 +25,11 @@
   text-shadow: 2px 2px 4px #000000; }
 
 .header__navegacion {
+  opacity: 0.8;
   width: 98vw;
   padding-bottom: 15px;
   margin-bottom: 65px;
-  background: #ce7b7b;
+  background: rgba(206, 123, 123, 0.9);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
   .header__navegacion ul {
     list-style: none;
@@ -40,10 +41,10 @@
 
 .header__menu > li > a {
   padding: 15px 20px;
-  color: #353535;
+  color: black;
   text-decoration: none;
   letter-spacing: 5px;
-  font-size: 16px; }
+  font-size: 18px; }
 
 .header__menu li a:hover {
   color: #18df9c;
@@ -85,14 +86,15 @@
   padding-right: 20px; }
 
 /*catalogo*/
-.imagenes__ruanas, .imagenes__ponchos, .imagenes__sweters, .imagenes__sacos {
+.imagenes__ruanas, .imagenes__sweters, .imagenes__sacos, .imagenes__polerones {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   background-color: #70c9b3;
   width: 100%;
-  justify-content: center; }
-  .imagenes__ruanas div, .imagenes__ponchos div, .imagenes__sweters div, .imagenes__sacos div {
+  justify-content: center;
+  background: rgba(127, 221, 193, 0.8); }
+  .imagenes__ruanas div, .imagenes__sweters div, .imagenes__sacos div, .imagenes__polerones div {
     display: flex;
     flex-direction: column;
     padding: 5px;
@@ -100,19 +102,24 @@
     width: 350px;
     border: 2px solid #dfe6e9; }
 
-.imagenes__ruanas div img, .imagenes__ponchos div img, .imagenes__sweters div img, .imagenes__sacos div img {
+img {
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 50px; }
+
+.imagenes__ruanas div img, .imagenes__sweters div img, .imagenes__sacos div img, .imagenes__polerones div img {
   transition: transform .8s; }
 
-.imagenes__ruanas div img:hover, .imagenes__ponchos div img:hover, .imagenes__sweters div img:hover, .imagenes__sacos div img:hover {
+.imagenes__ruanas div img:hover, .imagenes__sweters div img:hover, .imagenes__sacos div img:hover, .imagenes__polerones div img:hover {
   transform: scale(1.1); }
 
-#ruanas, #ponchos, #sweters, #sacos {
-  color: #ce7b7b;
+#ruanas, #polerones, #sweters, #sacos {
+  color: #70c9b3;
   padding-top: 30px;
   font-size: 30px; }
 
 h1 {
-  font-size: 20px;
+  font-size: 35px;
   text-transform: uppercase;
   color: #70c9b3;
   font-family: 'Fresca', sans-serif;
@@ -128,17 +135,14 @@ h1 {
 
 .footer__noWrap {
   border-bottom: black 1px solid; }
-
-img {
-  padding-right: 20px;
-  padding-left: 20px;
-  padding-bottom: 50px; }
+  .footer__noWrap img {
+    width: 100px; }
 
 /*contacto*/
 .footer__color {
   height: 20vh;
   width: 98vw;
-  background-color: #ce7b7b;
+  background: rgba(206, 123, 123, 0.8);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-top: 50px; }
 
@@ -149,9 +153,10 @@ form {
   display: flex;
   flex-direction: column;
   border: #ce7b7b 30px solid;
-  background-color: rgba(250, 237, 124, 0.788);
+  background-color: wheat;
   padding: 15px 15px 15px 15px;
-  box-shadow: 10px 10px 5px grey; }
+  box-shadow: 10px 10px 5px rgba(61, 59, 59, 0.945);
+  opacity: 0.8; }
 
 input {
   color: black; }
@@ -195,13 +200,14 @@ h3 {
 
 /*clase para centrar el copy*/
 .footer__center {
+  height: 100%;
   text-align: center;
   padding-bottom: 30px; }
 
-/*en cuidado de las prendas*/
+/*TIPS*/
 .formatoSubtitulo {
   font-size: 20px;
-  color: #ce7b7b;
+  color: black;
   text-transform: uppercase;
   font-weight: bold;
   text-align: left;
@@ -209,21 +215,27 @@ h3 {
   word-spacing: normal;
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 10px; }
+  padding-left: 10px;
+  text-align: center; }
 
 .tips {
   display: flex;
   flex-direction: column;
-  margin: 10px;
+  margin-bottom: 10px;
   margin-top: 20px;
-  border: 2px solid black;
-  background-color: rgba(250, 237, 124, 0.788); }
+  border: 1px solid black;
+  border-radius: 6px;
+  background: rgba(226, 219, 219, 0.3); }
 
 .masTips {
-  border-top: 2px solid black;
-  padding-top: 15px;
+  border: 1px solid black;
+  border-radius: 6px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 15px;
   word-spacing: normal;
-  font-size: 20px; }
+  font-size: 20px;
+  background: rgba(226, 219, 219, 0.3); }
 
 .textoCaracteristicas {
   font-family: 'fresca', sans-serif;
@@ -236,9 +248,9 @@ h3 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  background-color: #70c9b3;
   width: 100%;
-  justify-content: center; }
+  justify-content: center;
+  opacity: 0.7; }
   .padre div {
     display: flex;
     flex-direction: column; }
@@ -250,11 +262,6 @@ body {
   align-items: center; }
 
 /*grid*/
-body {
-  background-size: 109px 109px, 109px 109px, 100% 6px, 109px 109px, 109px 109px;
-  background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
-  font-family: 'Manjari', sans-serif; }
-
 /* CONTAINER */
 .container {
   /*centro*/
@@ -266,14 +273,13 @@ body {
   /*añade un espaciado entre los contenedores*/
   gap: 1.6em;
   /*creo las 5 columnas*/
-  grid-template-columns: repeat(5, 1fr);
-  box-shadow: 10px 10px 5px grey; }
+  grid-template-columns: repeat(5, 1fr); }
 
 .container > .header, .container > .content, .container > .sidebar, .container > .footer, .container > div {
-  background: #fff;
   padding: 20px;
   border: 1px solid #000000;
-  box-shadow: 10px 10px 5px grey; }
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 6px; }
 
 /*para el header dentro del container,
  para el footer dentro del container*/
@@ -288,7 +294,8 @@ body {
   grid-row: span 3; }
 
 .content > .article {
-  background: #70c9b3;
+  background-color: #70c9b3;
+  opacity: 0.8;
   padding: 20px;
   margin-top: 5px;
   color: black; }
@@ -305,7 +312,8 @@ body {
   color: black;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  opacity: 0.8; }
 
 .espacioEntreImg {
   padding-top: 50px; }
@@ -339,7 +347,10 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; }
+    align-items: center;
+    height: 30vh; }
+  .header__menu li {
+    border-bottom: blanchedalmond 1px solid; }
   .container {
     display: flex;
     flex-direction: column; }
@@ -350,7 +361,31 @@ body {
   .padre {
     display: flex;
     flex-direction: column;
-    width: 200px; } }
+    width: 200px; }
+  .header__submenu {
+    position: none;
+    width: none;
+    background: none;
+    visibility: none;
+    opacity: none;
+    transition: opacity none;
+    letter-spacing: none;
+    box-shadow: none; }
+  .header__submenu li a {
+    display: none;
+    display: none;
+    flex-direction: column;
+    align-items: none;
+    justify-content: none;
+    padding-right: none;
+    color: none;
+    text-decoration: none; }
+  .footer__noWrap {
+    border-bottom: black 1px solid; }
+    .footer__noWrap img {
+      width: 70px; }
+  h1 {
+    font-size: 30px; } }
 
 /*animaciones*/
 .header__logo {
@@ -362,3 +397,28 @@ body {
     opacity: 0; }
   100% {
     opacity: 1; } }
+
+body.imgFondo {
+  background-image: url(https://d3ugyf2ht6aenh.cloudfront.net/stores/810/249/products/18512611-16ea-4883-be5d-22c22d9ed28a_1_105_c1-e627095f59687991d816209144861002-640-0.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+body.contacto {
+  background-image: url(https://d3ugyf2ht6aenh.cloudfront.net/stores/810/249/products/be0751e1-3729-4f5f-92ae-a8caa042dc42_1_105_c1-36c16d3b5386b4326016209335156465-640-0.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+body.body__center {
+  background-image: url(https://i.pinimg.com/564x/01/bb/a3/01bba3d259ec96385e190b9069f8c520.jpg);
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+body.body__tips {
+  background-image: url(https://d3ugyf2ht6aenh.cloudfront.net/stores/810/249/products/4a1abf99-9250-4c57-ae41-d70f2c6b156c_1_105_c21-c2a62e9458d57506ef16171293825434-1024-1024.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+body.body__catalogo {
+  background-image: url(https://images.pexels.com/photos/235985/pexels-photo-235985.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+  background-repeat: no-repeat;
+  background-size: cover; }
