--- a/css/style.css
+++ b/css/style.css
@@ -100,12 +100,7 @@
     padding: 5px;
     margin: 20px;
     width: 350px;
-    border: 2px solid #dfe6e9; }
-
-img {
-  padding-right: 20px;
-  padding-left: 20px;
-  padding-bottom: 50px; }
+    border: 2px solid white; }
 
 .imagenes__ruanas div img, .imagenes__sweters div img, .imagenes__sacos div img, .imagenes__polerones div img {
   transition: transform .8s; }
@@ -114,9 +109,10 @@ img {
   transform: scale(1.1); }
 
 #ruanas, #polerones, #sweters, #sacos {
-  color: #70c9b3;
+  color: white;
   padding-top: 30px;
-  font-size: 30px; }
+  font-size: 30px;
+  text-transform: uppercase; }
 
 h1 {
   font-size: 35px;
@@ -135,8 +131,19 @@ h1 {
 
 .footer__noWrap {
   border-bottom: black 1px solid; }
-  .footer__noWrap img {
-    width: 100px; }
+
+.socialUno, .socialDos, .socialTres {
+  width: 70px;
+  padding-right: 10px;
+  padding-left: 10px;
+  display: inline-block;
+  padding-bottom: 50px; }
+
+.socialUno, .socialDos, .socialTres {
+  transition: transform .7s; }
+
+.socialUno:hover, .socialDos:hover, .socialTres:hover {
+  transform: scale(1.1); }
 
 /*contacto*/
 .footer__color {
@@ -243,7 +250,7 @@ h3 {
   padding: 1px 10px 10px 10px;
   font-size: 20px; }
 
-/*flexbox en cuidado de las prendas*/
+/*flexbox en tips*/
 .padre {
   display: flex;
   flex-direction: row;
@@ -304,7 +311,6 @@ body {
 .content .article p {
   padding: 10px; }
 
-/*entrando */
 .container > .sidebar {
   grid-column: span 2;
   grid-row: span 3;
@@ -382,8 +388,12 @@ body {
     text-decoration: none; }
   .footer__noWrap {
     border-bottom: black 1px solid; }
-    .footer__noWrap img {
-      width: 70px; }
+  .socialUno, .socialDos, .socialTres {
+    width: 40px;
+    padding-right: 5px;
+    padding-left: 5px;
+    display: inline-block;
+    padding-bottom: 45px; }
   h1 {
     font-size: 30px; } }
 
@@ -419,6 +429,5 @@ body.body__tips {
   background-size: cover; }
 
 body.body__catalogo {
-  background-image: url(https://images.pexels.com/photos/235985/pexels-photo-235985.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
-  background-repeat: no-repeat;
-  background-size: cover; }
+  background-image: url(https://i.pinimg.com/564x/1f/3f/2a/1f3f2ac2d1c0b4386dbda7300b0e8a39.jpg);
+  background-repeat: repeat; }
