--- a/scss/style.scss
+++ b/scss/style.scss
@@ -582,7 +582,7 @@ body.contacto{
 }
 
 body.body__center{
-    background-image: url(https://i.pinimg.com/564x/01/bb/a3/01bba3d259ec96385e190b9069f8c520.jpg);
+    background-image: url(https://drive.google.com/file/d/15dIaGX68UeeV3f6U4i-9TjKaELtQPeWb/view?usp=sharing);
     background-repeat: no-repeat;
     background-size: cover;
 }
